<resources>
    <string name="app_name">GuideDemo</string>
    <string name="hint_message">Enter A message</string>
    <string name="send">Send</string>
    <string name="to"> To </string>
    <string name="subject"> Subject </string>
    <string name="message"> Message </string>
    <string name="first_name">First Name </string>
    <string name="last_name">Last Name</string>
    <string name="save">save</string>
    <string name="_3rd"> opens Linear Layout Ex</string>

</resources>
