<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relative_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft= "16dp"
    android:paddingRight="16dp"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.rahul.guidedemo.RelativeLayout">

    <EditText
        android:id="@+id/firstName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/first_name"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/lastName"
          />
    <EditText
        android:id="@+id/lastName"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:hint="@string/last_name"
        />
    <Button
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:layout_below="@id/lastName"
        android:layout_alignParentEnd="true"/>






</RelativeLayout>
